@@ -43,7 +43,7 @@ Chronological list of authors
   - Joshua L. Phillips
 2013
   - Xavier Deupi
-
+  - Manuel Nuno Melo
 
 External code
 -------------
